--- a/css/style.css
+++ b/css/style.css
@@ -42,9 +42,9 @@ body {
   /* text-align: center; */
 }
 
-/* .text {
-  font-size: 4vv;
-} */
+.text {
+  font-size: 3vw;
+}
 
 img {
   width: 100%;
@@ -52,8 +52,43 @@ img {
 
 p {
   text-align: center;
+  color: #ffff00;
 }
 
+#third-section p {
+  color: #008000;
+}
+
+nav {
+  position: fixed;
+  z-index: 999;
+  /* position: absolute; */
+  /* top: 0; */
+  /* left: 0; */
+  
+}
+
+ul {
+  float: right;
+}
+
+li {
+  display: inline-block;
+}
+
+a {
+  display: block;
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  text-decoration: none;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 50%;
+  color: black;
+  margin: 0 20px;
+  box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.5);
+}
 
 
 
