--- a/css/style.css
+++ b/css/style.css
@@ -62,14 +62,14 @@ p {
 nav {
   position: fixed;
   z-index: 999;
-  /* position: absolute; */
-  /* top: 0; */
-  /* left: 0; */
-  
-}
+  /* background-color: pink; */
+  right: 0;
+  }
 
 ul {
-  float: right;
+  /* float: right; */
+  margin: 20px 15px;
+  /* background-color: blue; */
 }
 
 li {
@@ -87,8 +87,10 @@ a {
   border-radius: 50%;
   color: black;
   margin: 0 20px;
-  box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 5px 3px  rgba(0, 0, 0, 0.5);
 }
+
+
 
 
 
