--- a/css/style.css
+++ b/css/style.css
@@ -87,10 +87,17 @@ a {
   border-radius: 50%;
   color: black;
   margin: 0 20px;
-  box-shadow: 0px 5px 3px  rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 5px 3px;
 }
 
+a:hover {
+  box-shadow: 0px 25px 15px;
+}
 
+a:active {
+  transform: translate(+10%, +10%);
+  /* background-color: violet; */
+}
 
 
 
