--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Rubik Mono One', sans-serif;
 }
@@ -87,15 +91,17 @@ a {
   border-radius: 50%;
   color: black;
   margin: 0 20px;
-  box-shadow: 0px 5px 3px;
+  box-shadow: 0px 5px 3px rgba(0, 0, 0, .5);
 }
 
 a:hover {
-  box-shadow: 0px 25px 15px;
+  box-shadow: 0px 8px 6px rgba(0, 0, 0, .5);
 }
 
 a:active {
-  transform: translate(+10%, +10%);
+  background-color: gray;
+  box-shadow: 0 5px 3px rgba(0, 0, 0, .5);
+  transform: translate(0, 5px);
   /* background-color: violet; */
 }
 
